--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* Comman Class */
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#fff}
+@tailwind base;@tailwind components;@tailwind utilities;/* Comman Class */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#fff}
 input:-moz-placeholder,textarea:-moz-placeholder{color:#fff}
-.swiper-wrapper { align-items: center; }
-.swiper-slide { display: flex!important; justify-content: center; }
-.font-manrope {  font-family: "Manrope", sans-serif;}
-
+.swiper-wrapper{align-items:center;}
+.swiper-slide{display:flex!important;justify-content:center;}
+.font-manrope{font-family:"Manrope",sans-serif;}
 .newsletter input::-webkit-input-placeholder{color:#969696}
 .newsletter input:-moz-placeholder{color:#969696}
 /* end */
-
-.App {
-  text-align: center;
+.App{text-align:center;}
+.App-logo{height:40vmin;pointer-events:none;}
+@media (prefers-reduced-motion:no-preference){.App-logo{animation:App-logo-spin infinite 20s linear;}
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header{background-color:#282c34;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center;font-size:calc(10px + 2vmin);color:white;}
+.App-link{color:#61dafb;}
+@keyframes App-logo-spin{from{transform:rotate(0deg);}
+to{transform:rotate(360deg);}
 }
