--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @tailwind base;@tailwind components;@tailwind utilities;/* Comman Class */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#fff}
+
 input:-moz-placeholder,textarea:-moz-placeholder{color:#fff}
+/* html { height: 100%; min-height: 100%;}
+body { height: 100%;min-height: 100%}
+#root { height: 100%;} */
 .swiper-wrapper{align-items:center;}
 .swiper-slide{display:flex!important;justify-content:center;}
 .font-manrope{font-family:"Manrope",sans-serif;}
