--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
 @tailwind base;@tailwind components;@tailwind utilities;/* Comman Class */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#fff}
-
 input:-moz-placeholder,textarea:-moz-placeholder{color:#fff}
-/* html { height: 100%; min-height: 100%;}
-body { height: 100%;min-height: 100%}
-#root { height: 100%;} */
+/* html{height:100%;min-height:100%;}
+body{height:100%;min-height:100%}
+#root{height:100%;}
+*/
+.swiper-button-next,
+.swiper-button-prev {
+  color: black !important;
+  width: 40px!important;
+  height: 40px!important;
+  border-radius: 50px;
+  background-color: #fff;
+  font-size: 14px;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after { font-size: 14px;}
 .swiper-wrapper{align-items:center;}
 .swiper-slide{display:flex!important;justify-content:center;}
 .font-manrope{font-family:"Manrope",sans-serif;}
@@ -20,3 +31,19 @@ body { height: 100%;min-height: 100%}
 @keyframes App-logo-spin{from{transform:rotate(0deg);}
 to{transform:rotate(360deg);}
 }
+.form-checkbx input{padding:0;height:initial;width:initial;margin-bottom:0;display:none;cursor:pointer;}
+.form-checkbx label{position:relative;cursor:pointer;}
+.form-checkbx label:before{content:'';-webkit-appearance:none;background-color:#fff;padding:10px;display:inline-block;position:relative;vertical-align:middle;cursor:pointer;border-radius:3px;}
+.form-checkbx input:checked + label:after{content:'';display:block;position:absolute;top:6px;left:8px;width:5px;height:10px;border:solid #000000;border-width:0 1px 1px 0;transform:rotate(45deg);}
+.form-checkbx input:checked + label:before{background:#D7F23F;}
+.custom-prev,.custom-next{background-color:#000;/* Change the background */
+ color:#fff;/* Change the icon color */
+ width:50px;/* Adjust size */
+ height:50px;display:flex;align-items:center;justify-content:center;border-radius:50%;/* Make buttons round */
+ position:absolute;top:50%;/* Center vertically */
+ transform:translateY(-50%);z-index:10;cursor:pointer;}
+.custom-prev{left:10px;/* Adjust position */
+}
+.custom-next{right:10px;}
+
+
