--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-@tailwind base;@tailwind components;@tailwind utilities;/* Comman Class */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* Comman Class */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#fff}
 input:-moz-placeholder,textarea:-moz-placeholder{color:#fff}
 /* html{height:100%;min-height:100%;}
