--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @tailwind base;
-@tailwind components;@tailwind utilities; /* Comman Class */
+@tailwind components;
+@tailwind utilities; 
+/* Comman Class */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
@@ -122,7 +124,9 @@ button#\33.tabactive ~ .activeSlider{
 }
 .animate-spin-slow{animation:spin-slow 10s linear infinite;.aboutHeroData{grid-column:2 / 3;grid-row-end:4;}
 }
-@media(max-width:767px){.aboutMainBx{grid-column:1 / 4;grid-row-start:4;align-self:center;}
+@media(max-width:767px){
+  .activeSlider{height: 33px;}
+  .aboutMainBx{grid-column:1 / 4;grid-row-start:4;align-self:center;}
 .hero-grid{grid-template-rows:auto auto auto auto auto auto;align-items:start;}
 .aboutHeroData{grid-column:1 / 4;grid-row-start:2;}
 .abtHeroBx{height:auto;}
