--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@ input:-webkit-autofill {
     -webkit-text-fill-color: #f0f0f0 !important; /* Dark mode text color */
   }
 body{overflow-x:hidden;}
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .swiper-button-next,.swiper-button-prev{color:black !important;width:40px!important;height:40px!important;border-radius:50px;background-color:#ffffffa3;font-size:14px; transition: all ease .3s; }
 .swiper-button-prev:after,.swiper-button-next:after{font-size:11px!important;font-weight:700!important;}
 .swiper-wrapper{align-items:center;}
