--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@ to{transform:rotate(360deg);}
  transform:translateY(-50%);z-index:10;cursor:pointer;}
 .custom-prev{left:10px;/* Adjust position */
 }
+input[type="date"] {
+  width: 100%; 
+  box-sizing: border-box; 
+  appearance: none; 
+  -webkit-appearance: none; 
+}
 .custom-next{right:10px;}
 /* About */
 .aboutHeroData{grid-area:1 / 1 / 7 / 13;}
